fixed spacing on recurring costs

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -211,7 +211,7 @@ ul#nav li a {
 }
 
 #quote.complete .total-first-year {
-  margin: 20px 0;
+  margin: 10px 0 20px 0;
 }
 
 #quote.complete .total-first-year strong {
